More Content and CSS Fix

--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 
   <title>Ashok Dey's Resume</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta content="Personal Website of Ashok Dey" name="description">
+  <meta content="Ashok Dey" name="author">
+  <meta content=
+  "ashok-dey,computer-science-engineering,student,btech,greater-noida, noida, new-delhi, ncr,accutate- institute-management-technology,web-developer,web-designer,robotics,undergraduate"
+  name="keywords">
+  <!--META ENDING-->
 
+  <link href="favicon.png" rel="shorcut icon">
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
   <link type="text/css" rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -17,7 +24,7 @@
     </header>
     <article class="container about"> <!-- About Starting-->
         <h5 class="blue darken-4 grey-text text-lighten-5 z-depth-2"> About Me </h5>
-        <h6>I follow a cycle : Think, Create, Deploy, Update. That's All.</h6>
+        <h6>I follow a simple cycle : Think, Create, Deploy, Update. That's All.</h6>
         <hr>
         <article class="row"> <!-- Edu & Project Row -->
             <!-- Education Col -->
@@ -26,26 +33,27 @@
                 <section class="col s12">
                     <ul class="collapsible popout">
                         <li>
-                            <div class="collapsible-header"><i class="material-icons">turned_in</i>
-                                <span class="myBold">
+                            <div class="collapsible-header"><i class="material-icons deep-orange-text text-accent-4">turned_in</i>
+                                <span class="myBold deep-orange-text text-accent-4">
                                     B.Tech in CSE
                                 </span>
                             </div>
-                            <div class="collapsible-body">
+                            <div class="collapsible-body light-green darken-4 grey-text text-lighten-4">
                                 <p>
                                     Accurate Institute of Management &amp; Technology<br>
-                                    Expected : June 201 6 Percentile : 65%<br>
+                                    Expected : June 2016<br>
+                                    Percentile : 65%<br>
                                     Greater Noida, UP 201306
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <div class="collapsible-header"><i class="material-icons">grade</i>
-                                <span class="myBold">
-                                    AISSCE : Class 12<sup>th</sup>
+                            <div class="collapsible-header"><i class="material-icons cyan-text text-darken-4">grade</i>
+                                <span class="myBold cyan-text text-darken-4">
+                                    AISSCE : Class 12
                                 </span>
                             </div>
-                            <div class="collapsible-body">
+                            <div class="collapsible-body indigo darken-4 grey-text text-lighten-4">
                                 <p>
                                     Board : CBSE<br>
                                     Tata D.A.V School<br>
@@ -57,14 +65,15 @@
                         <li>
                             <div class="collapsible-header"><i class="material-icons">grade</i>
                                 <span class="myBold">
-                                    AISSE : Class 10<sup>th</sup>
+                                    AISSE : Class 10
                                 </span>
                             </div>
-                            <div class="collapsible-body">
+                            <div class="collapsible-body grey darken-4 grey-text text-lighten-4">
                                 <p>
                                     Board : CBSE<br>
                                     Tata D.A.V School<br>
-                                    Passed: March 2009 Percentile : 91%<br>
+                                    Passed: March 2009<br>
+                                    Percentile : 91%<br>
                                     Jamadoba, Dhanbad 828301
                                 </p>
                             </div>
@@ -198,10 +207,211 @@
                                 </div> <!--End of Card -->
                             </div>
                         </li>
-                    </ul>
+                    </ul> <!-- END Of collapse  -->
                 </section>
             </article><!--projects Col Ends here -->
         </article> <!--Edu & Project Row END -->
+        <article class="row"> <!-- Skills Row -->
+            <article class="skills">
+                <h5 class="blue darken-4 grey-text text-lighten-4 z-depth-2">
+                    Skills
+                </h5>
+                <h6>
+                    Languages I know, Software Suites, Operating Systems and other Tools that
+                    I can use to create stuffs !
+                </h6>
+                <hr>
+                <ul class="collapsible popout">
+                    <li> <!-- Skill 1 Web Dev -->
+                        <div class="collapsible-header"><i class="material-icons blue-text text-darken-3">code</i>
+                            <span class="myBold blue-text text-darken-3">
+                                Web Development
+                            </span>
+                        </div>
+                        <div class="collapsible-body">
+                            <div class="card myCard orange accent-4">
+                                <div class="card-content white-text">
+                                    <div class="row">
+                                        <div class="s4 tools-name">
+                                            <span class="myBold myHighlight-2 z-depth-1">HTML5</span>
+                                        </div>
+                                        <div class="s8 tools-progress">
+                                            <div class="progress myProgress">
+                                                  <div class="determinate web-dev-progress-color" style="width: 80%"></div>
+                                              </div>
+                                        </div>   <!-- tool-progress HTML5 END-->
+                                    </div> <!-- Row END -->
+                                    <div class="row">
+                                        <div class="s4 tools-name">
+                                            <span class="myBold myBold myHighlight-2 z-depth-1">CSS3</span>
+                                        </div>
+                                        <div class="s8 tools-progress">
+                                            <div class="progress myProgress">
+                                                  <div class="determinate web-dev-progress-color" style="width: 70%"></div>
+                                              </div>
+                                        </div>   <!-- tool-progress CSS3 END-->
+                                    </div> <!-- Row END -->
+                                    <div class="row">
+                                        <div class="s4 tools-name">
+                                            <span class="myBold myHighlight-2 z-depth-1">JavaScript</span>
+                                        </div>
+                                        <div class="s8 tools-progress">
+                                            <div class="progress myProgress">
+                                                  <div class="determinate web-dev-progress-color" style="width: 55%"></div>
+                                              </div>
+                                        </div>   <!-- tool-progress JS END-->
+                                    </div> <!-- Row END -->
+                                </div> <!-- END card Content-->
+                            </div> <!--End of Card -->
+                        </div>
+                    </li>
+                    <li> <!-- Skill 2 Application Dev -->
+                        <div class="collapsible-header"><i class="material-icons teal-text text-darken-3">airplay</i>
+                            <span class="myBold teal-text text-darken-3">
+                                Programming Languages
+                            </span>
+                        </div>
+                        <div class="collapsible-body">
+                            <div class="card myCard light-green darken-4">
+                                <div class="card-content white-text">
+                                    <div class="row">
+                                        <div class="s4 tools-name">
+                                            <span class="myBold myHighlight-2 z-depth-1">Python</span>
+                                        </div>
+                                        <div class="s8 tools-progress">
+                                            <div class="progress myProgress">
+                                                  <div class="determinate prog-lang-progress-color" style="width: 40%"></div>
+                                              </div>
+                                        </div>   <!-- tool-progress Python END-->
+                                    </div> <!-- Row END -->
+                                    <div class="row">
+                                        <div class="s4 tools-name">
+                                            <span class="myBold myBold myHighlight-2 z-depth-1">C/C++</span>
+                                        </div>
+                                        <div class="s8 tools-progress">
+                                            <div class="progress myProgress">
+                                                  <div class="determinate prog-lang-progress-color" style="width: 60%"></div>
+                                              </div>
+                                        </div>   <!-- tool-progress C/C++ END-->
+                                    </div> <!-- Row END -->
+                                    <div class="row">
+                                        <div class="s4 tools-name">
+                                            <span class="myBold myHighlight-2 z-depth-1">Java</span>
+                                        </div>
+                                        <div class="s8 tools-progress">
+                                            <div class="progress myProgress">
+                                                  <div class="determinate prog-lang-progress-color" style="width: 55%"></div>
+                                              </div>
+                                        </div>   <!-- tool-progress Java END-->
+                                    </div> <!-- Row END -->
+                                </div> <!-- END card Content-->
+                            </div> <!--End of Card -->
+                        </div>
+                    </li>
+                    <li> <!-- Skill 3 Softs  -->
+                        <div class="collapsible-header"><i class="material-icons pink-text text-darken-3">view_headline</i>
+                            <span class="myBold pink-text text-darken-3">
+                                Softwares &amp; Code Editors
+                            </span>
+                        </div>
+                        <div class="collapsible-body">
+                            <div class="card myCard pink lighten-2">
+                                <div class="card-content white-text">
+                                  <span class="myLight">
+                                      I love to try new tools, editors and IDEs, the ones which
+                                      I use most frequently are listed below:
+                                  </span>
+                                  <p>
+                                      <span class ="myBold myHighlight-4">
+                                          Adobe Photoshop, VisualStudio,
+                                          CodeBlocks, SublieText, Atom,
+                                          VS Code, PowerShell, GCC.
+                                      </span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li> <!-- Skill 4 Databases  -->
+                        <div class="collapsible-header"><i class="material-icons brown-text text-darken-4">work</i>
+                            <span class="myBold brown-text text-darken-4">
+                                Databases
+                            </span>
+                        </div>
+                        <div class="collapsible-body">
+                            <div class="card myCard grey darken-2">
+                                <div class="card-content white-text">
+                                  <span class="myLight">
+                                      Worked on relational database and now trying
+                                      Document Oriented Databases.
+                                  </span>
+                                  <p>
+                                      <span class ="myBold myHighlight-4">
+                                          MySQL &amp; MongoDB
+                                      </span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li> <!-- Skill 4 Frameworks  -->
+                        <div class="collapsible-header"><i class="material-icons orange-text text-darken-4">settings_applications</i>
+                            <span class="myBold orange-text text-darken-4">
+                                OS &amp; Frameworks
+                            </span>
+                        </div>
+                        <div class="collapsible-body">
+                            <div class="card myCard deep-orange lighten-2">
+                                <div class="card-content white-text">
+                                  <span class="myLight">
+                                      Now a days I am falling for JavaScript and trying lots of new frameworks. But I have tried the following frameworks as well :
+                                  </span>
+                                  <p>
+                                      <span class ="myBold myHighlight-4">
+                                          Bootstrap 3, Foundation 5, Materialize CSS,
+                                          NodeJS, Flask, jQuery
+                                      </span>
+                                    </p>
+                                    <span class="myLight">
+                                        i have worked on the following Opearting Systems :
+                                    </span>
+                                    <p>
+                                        <span class ="myBold myHighlight-4">
+                                            Windows XP and above  &amp; Ubuntu 12.10 and above
+                                        </span>
+                                      </p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul> <!-- END of Collapse -->
+            </article>
+        </article> <!-- Skils Row ENDS -->
+        <article class="row"> <!-- Interests row -->
+            <article class="interests s12"> <!-- Interests col-->
+                <h5 class="blue darken-4 grey-text text-lighten-4 z-depth-2">
+                    Interests
+                </h5>
+                <h6>
+                    I always try to keep myself updated with the latest news and trends of Software Development and the filed of Technology.
+                </h6>
+                <hr>
+                <h6>
+                    My keen interest lies in the following :
+                </h6>
+                <div class="row">
+                    <div class="col s12 l4  m8 offset-m2">
+                        <a class="waves-effect waves-light btn yellow darken-4"><i class="material-icons left">receipt</i>Data Structures</a>
+                    </div>
+                    <div class="col s12 l4 m8 offset-m2">
+                        <a class="waves-effect waves-light btn teal darken-4"><i class="material-icons left">group_work</i>Operating Systems</a>
+                    </div>
+                    <div class="col s12 l4 m8 offset-m2">
+                        <a class="waves-effect waves-light btn green darken-4"><i class="material-icons left">settings_remote</i>Arduino</a>
+                    </div>
+                </div> <!-- Rrow End -->
+            </article> <!--Interest Col Ends -->
+        </article><!-- Interests Row-->
     </article> <!-- ABOUT container ENDS Here-->
 
 
