--- a/index.html
+++ b/index.html
@@ -231,36 +231,15 @@
                         <div class="collapsible-body">
                             <div class="card myCard orange accent-4">
                                 <div class="card-content white-text">
-                                    <div class="row">
-                                        <div class="s4 tools-name">
-                                            <span class="myBold myHighlight-2 z-depth-1">HTML5</span>
-                                        </div>
-                                        <div class="s8 tools-progress">
-                                            <div class="progress myProgress">
-                                                  <div class="determinate web-dev-progress-color" style="width: 80%"></div>
-                                              </div>
-                                        </div>   <!-- tool-progress HTML5 END-->
-                                    </div> <!-- Row END -->
-                                    <div class="row">
-                                        <div class="s4 tools-name">
-                                            <span class="myBold myBold myHighlight-2 z-depth-1">CSS3</span>
-                                        </div>
-                                        <div class="s8 tools-progress">
-                                            <div class="progress myProgress">
-                                                  <div class="determinate web-dev-progress-color" style="width: 70%"></div>
-                                              </div>
-                                        </div>   <!-- tool-progress CSS3 END-->
-                                    </div> <!-- Row END -->
-                                    <div class="row">
-                                        <div class="s4 tools-name">
-                                            <span class="myBold myHighlight-2 z-depth-1">JavaScript</span>
-                                        </div>
-                                        <div class="s8 tools-progress">
-                                            <div class="progress myProgress">
-                                                  <div class="determinate web-dev-progress-color" style="width: 55%"></div>
-                                              </div>
-                                        </div>   <!-- tool-progress JS END-->
-                                    </div> <!-- Row END -->
+                                    <span class="myLight">
+                                        Mostly I design and create web apps.
+                                        The languages I use are:
+                                    </span>
+                                    <p>
+                                        <span class ="myBold myHighlight-4">
+                                            HTML5, CSS3 &amp; JavaScript
+                                        </span>
+                                   </p>
                                 </div> <!-- END card Content-->
                             </div> <!--End of Card -->
                         </div>
@@ -274,36 +253,14 @@
                         <div class="collapsible-body">
                             <div class="card myCard light-green darken-4">
                                 <div class="card-content white-text">
-                                    <div class="row">
-                                        <div class="s4 tools-name">
-                                            <span class="myBold myHighlight-2 z-depth-1">Python</span>
-                                        </div>
-                                        <div class="s8 tools-progress">
-                                            <div class="progress myProgress">
-                                                  <div class="determinate prog-lang-progress-color" style="width: 40%"></div>
-                                              </div>
-                                        </div>   <!-- tool-progress Python END-->
-                                    </div> <!-- Row END -->
-                                    <div class="row">
-                                        <div class="s4 tools-name">
-                                            <span class="myBold myBold myHighlight-2 z-depth-1">C/C++</span>
-                                        </div>
-                                        <div class="s8 tools-progress">
-                                            <div class="progress myProgress">
-                                                  <div class="determinate prog-lang-progress-color" style="width: 60%"></div>
-                                              </div>
-                                        </div>   <!-- tool-progress C/C++ END-->
-                                    </div> <!-- Row END -->
-                                    <div class="row">
-                                        <div class="s4 tools-name">
-                                            <span class="myBold myHighlight-2 z-depth-1">Java</span>
-                                        </div>
-                                        <div class="s8 tools-progress">
-                                            <div class="progress myProgress">
-                                                  <div class="determinate prog-lang-progress-color" style="width: 55%"></div>
-                                              </div>
-                                        </div>   <!-- tool-progress Java END-->
-                                    </div> <!-- Row END -->
+                                    <span class="myLight">
+                                        The programming languages I have tried are listed below:
+                                    </span>
+                                    <p>
+                                        <span class ="myBold myHighlight-4">
+                                            C, C++, PHP, Java, Python, JavaScript
+                                        </span>
+                                   </p>
                                 </div> <!-- END card Content-->
                             </div> <!--End of Card -->
                         </div>
@@ -327,7 +284,7 @@
                                           CodeBlocks, SublieText, Atom,
                                           VS Code, PowerShell, GCC.
                                       </span>
-                                    </p>
+                                 </p>
                                 </div>
                             </div>
                         </div>
