addd font awesome, social links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!--META ENDING-->
 
   <link href="favicon.png" rel="shorcut icon">
-  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>  <link type="text/css" rel="stylesheet" href="css/font-awesome.min.css"/>
   <link type="text/css" rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -369,6 +369,46 @@
                 </div> <!-- Rrow End -->
             </article> <!--Interest Col Ends -->
         </article><!-- Interests Row-->
+        <footer>
+            <!--Social Links FAB-->
+            <div class="fixed-action-btn horizontal" style="bottom: 45px; right: 24px;">
+              <a class="btn-floating btn-large blue darken-4">
+                <i class="large material-icons">call</i>
+              </a>
+              <ul>
+                <li>
+                    <a class="btn-floating black" href="https://github.com/ashokdey" target="_blank">
+                    <i class="fa fa-github-alt"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="btn-floating blue darken-2" href="https://linkedin.com/in/ashokdey" target="_blank">
+                        <i class="fa fa-linkedin"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="btn-floating grey darken-4" href="https://stackoverflow.com/users/2804236/ashok-dey" target="_blank">
+                        <i class="fa fa-stack-overflow"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="btn-floating blue darken-4" href="https://www.facebook.com/3Dforce007" target="_blank">
+                        <i class="fa fa-facebook-f"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="btn-floating blue lighten-2" href="https://twitter.com/aka_0x1" target="_blank">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="btn-floating red" href="https://plus.google.com/+AshokDey/" target="_blank">
+                        <i class="fa fa-google-plus"></i>
+                    </a>
+                </li>
+              </ul>
+            </div>
+        </footer>
     </article> <!-- ABOUT container ENDS Here-->
 
 
