More font Awesome Icons

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <section class="col s12">
                     <ul class="collapsible popout">
                         <li>
-                            <div class="collapsible-header"><i class="material-icons deep-orange-text text-accent-4">turned_in</i>
-                                <span class="myBold deep-orange-text text-accent-4">
+                            <div class="collapsible-header"><i class="fa fa-graduation-cap grey-text text-darken-2"></i>
+                                <span class="myBold lime-text text-darken-4">
                                     B.Tech in CSE
                                 </span>
                             </div>
@@ -48,8 +48,8 @@
                             </div>
                         </li>
                         <li>
-                            <div class="collapsible-header"><i class="material-icons cyan-text text-darken-4">grade</i>
-                                <span class="myBold cyan-text text-darken-4">
+                            <div class="collapsible-header"><i class="fa fa-university"></i>
+                                <span class="myBold light-green-text">
                                     AISSCE : Class 12
                                 </span>
                             </div>
@@ -63,8 +63,8 @@
                             </div>
                         </li>
                         <li>
-                            <div class="collapsible-header"><i class="material-icons">grade</i>
-                                <span class="myBold">
+                            <div class="collapsible-header"><i class="fa fa-university"></i>
+                                <span class="myBold grey-text text-darken-2">
                                     AISSE : Class 10
                                 </span>
                             </div>
@@ -87,7 +87,7 @@
                 <section class="col s12">
                     <ul class="collapsible popout">
                         <li> <!-- Project 1 -->
-                            <div class="collapsible-header"><i class="material-icons purple-text text-darken-4">settings_input_antenna</i>
+                            <div class="collapsible-header"><i class="fa fa-cubes orange-text text-darken-4"></i>
                                 <span class="myBold purple-text text-darken-4">
                                     Qurious
                                 </span>
@@ -112,8 +112,8 @@
                             </div>
                         </li>
                         <li> <!-- Project 2 -->
-                            <div class="collapsible-header"><i class="material-icons red-text text-accent-4">chat</i>
-                                <span class="myBold red-text text-accent-4">
+                            <div class="collapsible-header"><i class="fa fa-comments-o teal-text text-darken-4"></i>
+                                <span class="myBold yellow-text text-accent-4">
                                     Group Chat Application
                                 </span>
                             </div>
@@ -136,8 +136,8 @@
                             </div>
                         </li>
                         <li> <!-- Project 3 -->
-                            <div class="collapsible-header"><i class="material-icons teal-text text-darken-4">business</i>
-                                <span class="myBold teal-text text-darken-4">
+                            <div class="collapsible-header"><i class="material-icons pink-text text-darken-4">business</i>
+                                <span class="myBold grey-text text-darken-4">
                                     Website for Intek
                                 </span>
                             </div>
@@ -162,8 +162,8 @@
                             </div>
                         </li>
                         <li> <!-- Project 4 -->
-                            <div class="collapsible-header"><i class="material-icons orange-text text-darken-4">assignment_ind</i>
-                                <span class="myBold orange-text text-darken-4">
+                            <div class="collapsible-header"><i class="fa fa-diamond"></i>
+                                <span class="myBold cyan-text text-darken-4">
                                     Personal Website
                                 </span>
                             </div>
@@ -190,7 +190,7 @@
                             </div>
                         </li>
                         <li> <!-- Project 5 -->
-                            <div class="collapsible-header"><i class="material-icons green-text text-darken-4">loyalty</i>
+                            <div class="collapsible-header"><i class="material-icons red-text text-darken-4">loyalty</i>
                                 <span class="myBold myUpper green-text text-darken-4">
                                     Web Design Collections
                                 </span>
@@ -223,7 +223,7 @@
                 <hr>
                 <ul class="collapsible popout">
                     <li> <!-- Skill 1 Web Dev -->
-                        <div class="collapsible-header"><i class="material-icons blue-text text-darken-3">code</i>
+                        <div class="collapsible-header"><i class="fa fa-code indigo-text text-darken-4"></i>
                             <span class="myBold blue-text text-darken-3">
                                 Web Development
                             </span>
@@ -245,8 +245,8 @@
                         </div>
                     </li>
                     <li> <!-- Skill 2 Application Dev -->
-                        <div class="collapsible-header"><i class="material-icons teal-text text-darken-3">airplay</i>
-                            <span class="myBold teal-text text-darken-3">
+                        <div class="collapsible-header"><i class="fa fa-language teal-text text-darken-3"></i>
+                            <span class="myBold green-text text-darken-4">
                                 Programming Languages
                             </span>
                         </div>
@@ -254,7 +254,7 @@
                             <div class="card myCard light-green darken-4">
                                 <div class="card-content white-text">
                                     <span class="myLight">
-                                        The programming languages I have tried are listed below:
+                                        The programming languages I can code in are listed below:
                                     </span>
                                     <p>
                                         <span class ="myBold myHighlight-4">
@@ -266,8 +266,8 @@
                         </div>
                     </li>
                     <li> <!-- Skill 3 Softs  -->
-                        <div class="collapsible-header"><i class="material-icons pink-text text-darken-3">view_headline</i>
-                            <span class="myBold pink-text text-darken-3">
+                        <div class="collapsible-header"><i class="fa fa-puzzle-piece pink-text text-darken-3"></i>
+                            <span class="myBold pink-text text-lighten-2">
                                 Softwares &amp; Code Editors
                             </span>
                         </div>
@@ -290,7 +290,7 @@
                         </div>
                     </li>
                     <li> <!-- Skill 4 Databases  -->
-                        <div class="collapsible-header"><i class="material-icons brown-text text-darken-4">work</i>
+                        <div class="collapsible-header"><i class="fa fa-database lime-text text-accent-2"></i>
                             <span class="myBold brown-text text-darken-4">
                                 Databases
                             </span>
@@ -312,8 +312,8 @@
                         </div>
                     </li>
                     <li> <!-- Skill 4 Frameworks  -->
-                        <div class="collapsible-header"><i class="material-icons orange-text text-darken-4">settings_applications</i>
-                            <span class="myBold orange-text text-darken-4">
+                        <div class="collapsible-header"><i class="fa fa-heartbeat red-text text-darken-4"></i>
+                            <span class="myBold orange-text text-darken-1">
                                 OS &amp; Frameworks
                             </span>
                         </div>
@@ -408,6 +408,7 @@
                 </li>
               </ul>
             </div>
+
         </footer>
     </article> <!-- ABOUT container ENDS Here-->
 
