--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     </header>
     <article class="container about"> <!-- About Starting-->
         <h5 class="blue darken-4 grey-text text-lighten-5 z-depth-2"> About Me </h5>
-        <h6>I follow a simple cycle : Think, Create, Deploy, Update. That's All.</h6>
+        <h6 class="blue-text text-darken-3 z-depth-1">
+            Hello folks ! Welcome to my Online Resume. In short, I am a Fullstack developer and I follow a simple cycle :<span class="myBold blue-text" style="text-transform:none"> Think, Create, Deploy, Update.</span> That's All.
+        </h6>
         <hr>
         <article class="row"> <!-- Edu & Project Row -->
             <!-- Education Col -->
