--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
+<!DOCTYPE html>
 <html>
 <head>
-
   <title>Ashok Dey's Resume</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta content="Personal Website of Ashok Dey" name="description">
@@ -24,7 +24,7 @@
     </header>
     <article class="container about"> <!-- About Starting-->
         <h5 class="blue darken-4 grey-text text-lighten-5 z-depth-2"> About Me </h5>
-        <h6 class="blue-text text-darken-3 z-depth-1">
+        <h6 class="blue-text text-darken-3">
             Hello folks ! Welcome to my Online Resume. In short, I am a Fullstack developer and I follow a simple cycle :<span class="myBold blue-text" style="text-transform:none"> Think, Create, Deploy, Update.</span> That's All.
         </h6>
         <hr>
@@ -302,7 +302,7 @@
                                 <div class="card-content white-text">
                                   <span class="myLight">
                                       Worked on relational database and now trying
-                                      Document Oriented Databases.
+                                      Document Oriented database.
                                   </span>
                                   <p>
                                       <span class ="myBold myHighlight-4">
